new designed algorithms added